--- a/client/.env
+++ b/client/.env
@@ -1,3 +1,3 @@
 VITE_CLERK_PUBLISHABLE_KEY=pk_test_d2lyZWQtY2hvdy03NS5jbGVyay5hY2NvdW50cy5kZXYk
-VITE_BACKEND_URL = 'http://localhost:4000'
+VITE_BACKEND_URL = 'https://bg-removal-kappa-steel.vercel.app'
 VITE_RAZORPAY_KEY_ID = '------ Razorpay Key Id here ------'
